--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         run: mkdir ${{ github.workspace }}/output
       - name: Change dir owner
         run: sudo chown -R 1000:1000 ${{ github.workspace }}
+      - name: copy YAML
+        run: cp testphp.yml ${{ github.workspace }}
       - name: ls dirs
         run: ls -larh ${{ github.workspace }}
       - name: Checkmarx DAST Github Action
