--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,10 @@ jobs:
         run: mkdir ${{ github.workspace }}/output
       - name: Change dir owner
         run: sudo chown -R 1000:1000 ${{ github.workspace }}
-      - name: copy YAML
-        run: cp testphp.yml ${{ github.workspace }}
+#      - name: copy YAML
+#        run: cp testphp.yml ${{ github.workspace }}
+      - name: PWD
+        run: pwd
       - name: ls dirs
         run: ls -larh ${{ github.workspace }}
       - name: Checkmarx DAST Github Action
