--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,12 @@ jobs:
         run: mkdir ${{ github.workspace }}/output
       - name: Change dir owner
         run: sudo chown -R 1000:1000 ${{ github.workspace }}
-#      - name: copy YAML
-#        run: cp testphp.yml ${{ github.workspace }}
+      - name: copy YAML
+        run: cp testphp.yml ${{ github.workspace }}
       - name: PWD
         run: pwd
+      - name: echo workspace
+        run: echo ${{ github.workspace }}
 #      - name: COPY YAML
 #        run: cp testphp.yml /github/workspace/
       - name: ls dirs
